// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`flux emulator config editing should add an adapter with params to a feed 1`] = `
[
  {
    "address": "0x0000000000000000000000000000000000000003",
    "category": "test",
    "contractVersion": 4,
    "data": {
      "from": "TEST4",
      "source": "sourceName4",
      "to": "THIS4",
    },
    "deviationThreshold": 2,
    "name": "TEST4 / THIS4 source=sourceName4",
    "nodes": [
      {
        "address": "0x0000000000000000000000000000000000000003",
        "dataProviders": [
          "ea-compositeName4",
        ],
        "name": "nodeName",
      },
    ],
    "path": "test-this",
    "precision": 18,
    "status": "live",
    "symbol": "Ξ",
  },
]
`;

exports[`flux emulator config editing should add an adapter with params to a feed 2`] = `
[
  {
    "address": "0x0000000000000000000000000000000000000003",
    "category": "test",
    "contractVersion": 4,
    "data": {
      "from": "TEST4",
      "source": "sourceName4",
      "to": "THIS4",
    },
    "deviationThreshold": 2,
    "name": "TEST4 / THIS4 source=sourceName4",
    "nodes": [
      {
        "address": "0x0000000000000000000000000000000000000003",
        "dataProviders": [
          "ea-compositeName4",
        ],
        "name": "nodeName",
      },
    ],
    "path": "test-this",
    "precision": 18,
    "status": "live",
    "symbol": "Ξ",
  },
]
`;

exports[`flux emulator config editing should add an adpater to a feed 1`] = `
[
  {
    "address": "0x0000000000000000000000000000000000000000",
    "category": "test",
    "contractVersion": 4,
    "data": {
      "from": "TEST",
      "to": "THIS",
    },
    "deviationThreshold": 2,
    "name": "TEST / THIS",
    "nodes": [
      {
        "address": "0x0000000000000000000000000000000000000000",
        "dataProviders": [
          "ea-adapterName2",
        ],
        "name": "nodeName",
      },
    ],
    "path": "test-this",
    "precision": 18,
    "status": "live",
    "symbol": "Ξ",
  },
  {
    "address": "0x0000000000000000000000000000000000000000",
    "category": "test",
    "contractVersion": 4,
    "data": {
      "from": "TEST2",
      "to": "THIS2",
    },
    "deviationThreshold": 2,
    "name": "TEST2 / THIS2",
    "nodes": [
      {
        "address": "0x0000000000000000000000000000000000000000",
        "dataProviders": [
          "ea-adapterName2",
        ],
        "name": "nodeName",
      },
      {
        "address": "0x0000000000000000000000000000000000000002",
        "dataProviders": [
          "ea-adapterName2",
        ],
        "name": "nodeName2",
      },
    ],
    "path": "test-this",
    "precision": 18,
    "status": "live",
    "symbol": "Ξ",
  },
]
`;

exports[`flux emulator config editing should add an adpater to a feed 2`] = `
[
  {
    "address": "0x0000000000000000000000000000000000000000",
    "category": "test",
    "contractVersion": 4,
    "data": {
      "from": "TEST",
      "to": "THIS",
    },
    "deviationThreshold": 2,
    "name": "TEST / THIS",
    "nodes": [
      {
        "address": "0x0000000000000000000000000000000000000000",
        "dataProviders": [
          "ea-adapterName2",
        ],
        "name": "nodeName",
      },
    ],
    "path": "test-this",
    "precision": 18,
    "status": "live",
    "symbol": "Ξ",
  },
  {
    "address": "0x0000000000000000000000000000000000000000",
    "category": "test",
    "contractVersion": 4,
    "data": {
      "from": "TEST2",
      "to": "THIS2",
    },
    "deviationThreshold": 2,
    "name": "TEST2 / THIS2",
    "nodes": [
      {
        "address": "0x0000000000000000000000000000000000000000",
        "dataProviders": [
          "ea-adapterName2",
        ],
        "name": "nodeName",
      },
      {
        "address": "0x0000000000000000000000000000000000000002",
        "dataProviders": [
          "ea-adapterName2",
        ],
        "name": "nodeName2",
      },
    ],
    "path": "test-this",
    "precision": 18,
    "status": "live",
    "symbol": "Ξ",
  },
]
`;

exports[`flux emulator config editing should add an adpater to a feed 3`] = `
[
  {
    "address": "0x0000000000000000000000000000000000000000",
    "category": "test",
    "contractVersion": 4,
    "data": {
      "from": "TEST",
      "to": "THIS",
    },
    "deviationThreshold": 2,
    "name": "TEST / THIS",
    "nodes": [
      {
        "address": "0x0000000000000000000000000000000000000000",
        "dataProviders": [
          "ea-adapterName2",
          "ea-adapterName1",
        ],
        "name": "nodeName",
      },
      {
        "address": "0x0000000000000000000000000000000000000002",
        "dataProviders": [
          "ea-adapterName1",
        ],
        "name": "nodeName2",
      },
    ],
    "path": "test-this",
    "precision": 18,
    "status": "live",
    "symbol": "Ξ",
  },
  {
    "address": "0x0000000000000000000000000000000000000000",
    "category": "test",
    "contractVersion": 4,
    "data": {
      "from": "TEST2",
      "to": "THIS2",
    },
    "deviationThreshold": 2,
    "name": "TEST2 / THIS2",
    "nodes": [
      {
        "address": "0x0000000000000000000000000000000000000000",
        "dataProviders": [
          "ea-adapterName2",
          "ea-adapterName1",
        ],
        "name": "nodeName",
      },
      {
        "address": "0x0000000000000000000000000000000000000002",
        "dataProviders": [
          "ea-adapterName2",
        ],
        "name": "nodeName2",
      },
    ],
    "path": "test-this",
    "precision": 18,
    "status": "live",
    "symbol": "Ξ",
  },
]
`;

exports[`flux emulator config editing should convert the config to a k6 payload 1`] = `
[
  {
    "data": "{\"data\":{\"from\":\"TEST\",\"to\":\"THIS\"}}",
    "id": "a45f34aa-bb87-420f-aa77-2b7aa5590b8d",
    "method": "POST",
    "name": "TEST / THIS",
  },
  {
    "data": "{\"data\":{\"from\":\"TEST2\",\"to\":\"THIS2\"}}",
    "id": "a45f34aa-bb87-420f-aa77-2b7aa5590b8d",
    "method": "POST",
    "name": "TEST2 / THIS2",
  },
  {
    "data": "{\"data\":{\"from\":\"TEST3\",\"to\":\"THIS3\"}}",
    "id": "a45f34aa-bb87-420f-aa77-2b7aa5590b8d",
    "method": "POST",
    "name": "TEST3 / THIS3",
  },
  {
    "data": "{"data":{"from":"TEST4","to":"THIS4"}}",
    "id": "a45f34aa-bb87-420f-aa77-2b7aa5590b8d",
    "method": "POST",
    "name": "TEST4 / THIS4",
  },
]
`;

exports[`flux emulator config editing should fail if the post of the config is unsuccessful 1`] = `[Error: Request failed with status code 500]`;

exports[`flux emulator config editing should parse a feed 1`] = `
[
  ReferenceContractConfig {
    "address": "0x0000000000000000000000000000000000000000",
    "category": "test",
    "contractVersion": 4,
    "data": {
      "from": "TEST",
      "to": "THIS",
    },
    "deviationThreshold": 2,
    "name": "TEST / THIS",
    "nodes": [
      FeedNode {
        "address": "0x0000000000000000000000000000000000000000",
        "dataProviders": [
          "adapterName1",
          "adapterName2",
        ],
        "name": "nodeName",
      },
      FeedNode {
        "address": "0x0000000000000000000000000000000000000002",
        "dataProviders": [
          "adapterName1",
        ],
        "name": "nodeName2",
      },
    ],
    "path": "test-this",
    "precision": 18,
    "status": "live",
    "symbol": "Ξ",
  },
  ReferenceContractConfig {
    "address": "0x0000000000000000000000000000000000000000",
    "category": "test",
    "contractVersion": 4,
    "data": {
      "from": "TEST2",
      "to": "THIS2",
    },
    "deviationThreshold": 2,
    "name": "TEST2 / THIS2",
    "nodes": [
      FeedNode {
        "address": "0x0000000000000000000000000000000000000000",
        "dataProviders": [
          "adapterName1",
          "adapterName2",
        ],
        "name": "nodeName",
      },
      FeedNode {
        "address": "0x0000000000000000000000000000000000000002",
        "dataProviders": [
          "adapterName2",
        ],
        "name": "nodeName2",
      },
    ],
    "path": "test-this",
    "precision": 18,
    "status": "live",
    "symbol": "Ξ",
  },
  ReferenceContractConfig {
    "address": "0x0000000000000000000000000000000000000003",
    "category": "test",
    "contractVersion": 4,
    "data": {
      "from": "TEST3",
      "to": "THIS3",
    },
    "deviationThreshold": 2,
    "name": "TEST3 / THIS3",
    "nodes": [
      FeedNode {
        "address": "0x0000000000000000000000000000000000000003",
        "dataProviders": [
          "adapterName3",
        ],
        "name": "nodeName",
      },
    ],
    "path": "test-this",
    "precision": 18,
    "status": "live",
    "symbol": "Ξ",
  },
  ReferenceContractConfig {
    "address": "0x0000000000000000000000000000000000000003",
    "category": "test",
    "contractVersion": 4,
    "data": {
      "from": "TEST4",
      "to": "THIS4",
    },
    "deviationThreshold": 2,
    "name": "TEST4 / THIS4",
    "nodes": [
      FeedNode {
        "address": "0x0000000000000000000000000000000000000003",
        "dataProviders": [
          "compositeName4?source=sourceName4",
        ],
        "name": "nodeName",
      },
    ],
    "path": "test-this",
    "precision": 18,
    "status": "live",
    "symbol": "Ξ",
  },
]
`;

exports[`flux emulator config editing should remove an adapter from a feed 1`] = `
[
  ReferenceContractConfig {
    "address": "0x0000000000000000000000000000000000000000",
    "category": "test",
    "contractVersion": 4,
    "data": {
      "from": "TEST",
      "to": "THIS",
    },
    "deviationThreshold": 2,
    "name": "TEST / THIS",
    "nodes": [
      FeedNode {
        "address": "0x0000000000000000000000000000000000000000",
        "dataProviders": [
          "adapterName2",
        ],
        "name": "nodeName",
      },
    ],
    "path": "test-this",
    "precision": 18,
    "status": "live",
    "symbol": "Ξ",
  },
  ReferenceContractConfig {
    "address": "0x0000000000000000000000000000000000000000",
    "category": "test",
    "contractVersion": 4,
    "data": {
      "from": "TEST2",
      "to": "THIS2",
    },
    "deviationThreshold": 2,
    "name": "TEST2 / THIS2",
    "nodes": [
      FeedNode {
        "address": "0x0000000000000000000000000000000000000000",
        "dataProviders": [
          "adapterName2",
        ],
        "name": "nodeName",
      },
      FeedNode {
        "address": "0x0000000000000000000000000000000000000002",
        "dataProviders": [
          "adapterName2",
        ],
        "name": "nodeName2",
      },
    ],
    "path": "test-this",
    "precision": 18,
    "status": "live",
    "symbol": "Ξ",
  },
  ReferenceContractConfig {
    "address": "0x0000000000000000000000000000000000000003",
    "category": "test",
    "contractVersion": 4,
    "data": {
      "from": "TEST3",
      "to": "THIS3",
    },
    "deviationThreshold": 2,
    "name": "TEST3 / THIS3",
    "nodes": [
      FeedNode {
        "address": "0x0000000000000000000000000000000000000003",
        "dataProviders": [
          "adapterName3",
        ],
        "name": "nodeName",
      },
    ],
    "path": "test-this",
    "precision": 18,
    "status": "live",
    "symbol": "Ξ",
  },
  ReferenceContractConfig {
    "address": "0x0000000000000000000000000000000000000003",
    "category": "test",
    "contractVersion": 4,
    "data": {
      "from": "TEST4",
      "to": "THIS4",
    },
    "deviationThreshold": 2,
    "name": "TEST4 / THIS4",
    "nodes": [
      FeedNode {
        "address": "0x0000000000000000000000000000000000000003",
        "dataProviders": [
          "compositeName4?source=sourceName4",
        ],
        "name": "nodeName",
      },
    ],
    "path": "test-this",
    "precision": 18,
    "status": "live",
    "symbol": "Ξ",
  },
]
`;

exports[`flux emulator config editing should remove an adapter from a feed 2`] = `
[
  ReferenceContractConfig {
    "address": "0x0000000000000000000000000000000000000000",
    "category": "test",
    "contractVersion": 4,
    "data": {
      "from": "TEST",
      "to": "THIS",
    },
    "deviationThreshold": 2,
    "name": "TEST / THIS",
    "nodes": [
      FeedNode {
        "address": "0x0000000000000000000000000000000000000000",
        "dataProviders": [
          "adapterName2",
        ],
        "name": "nodeName",
      },
    ],
    "path": "test-this",
    "precision": 18,
    "status": "live",
    "symbol": "Ξ",
  },
  ReferenceContractConfig {
    "address": "0x0000000000000000000000000000000000000000",
    "category": "test",
    "contractVersion": 4,
    "data": {
      "from": "TEST2",
      "to": "THIS2",
    },
    "deviationThreshold": 2,
    "name": "TEST2 / THIS2",
    "nodes": [
      FeedNode {
        "address": "0x0000000000000000000000000000000000000000",
        "dataProviders": [
          "adapterName2",
        ],
        "name": "nodeName",
      },
      FeedNode {
        "address": "0x0000000000000000000000000000000000000002",
        "dataProviders": [
          "adapterName2",
        ],
        "name": "nodeName2",
      },
    ],
    "path": "test-this",
    "precision": 18,
    "status": "live",
    "symbol": "Ξ",
  },
  ReferenceContractConfig {
    "address": "0x0000000000000000000000000000000000000003",
    "category": "test",
    "contractVersion": 4,
    "data": {
      "from": "TEST4",
      "to": "THIS4",
    },
    "deviationThreshold": 2,
    "name": "TEST4 / THIS4",
    "nodes": [
      FeedNode {
        "address": "0x0000000000000000000000000000000000000003",
        "dataProviders": [
          "compositeName4?source=sourceName4",
        ],
        "name": "nodeName",
      },
    ],
    "path": "test-this",
    "precision": 18,
    "status": "live",
    "symbol": "Ξ",
  },
]
`;

exports[`flux emulator config editing should remove an adapter from a feed 3`] = `
[
  ReferenceContractConfig {
    "address": "0x0000000000000000000000000000000000000003",
    "category": "test",
    "contractVersion": 4,
    "data": {
      "from": "TEST4",
      "to": "THIS4",
    },
    "deviationThreshold": 2,
    "name": "TEST4 / THIS4",
    "nodes": [
      FeedNode {
        "address": "0x0000000000000000000000000000000000000003",
        "dataProviders": [
          "compositeName4?source=sourceName4",
        ],
        "name": "nodeName",
      },
    ],
    "path": "test-this",
    "precision": 18,
    "status": "live",
    "symbol": "Ξ",
  },
]
`;
